--- a/trabajo/redes.tex
+++ b/trabajo/redes.tex
@@ -88,7 +88,7 @@ Usando los procesos del material suplementario, la expresión puede aproximarse 
 $$F(k,\gamma)\approx 2exp\{\frac{k}{2}log[\gamma(1-\gamma)]+\frac{k}{24}log^2(\frac{\gamma}{1-\gamma})\}$$
 
 Esta expresión es la que hemos usado para todas las partes replicadas de nuestra revisión.
-Para concluir, presentamos en la gráfica \ref{h} que también se puede ver en \cite{arti} sobre la relación entre el parámetro de forma y la fracción $F(k,\gamma)$
+Para concluir, presentamos en la gráfica \ref{h}, que también se puede ver en \cite{arti}, la relación entre el parámetro de forma y la fracción $F(k,\gamma)$
 
 \begin{figure}
 	\centering
